# lab_06

./: .appveyor.yml  .travis.yml  CMakeLists.txt  CPackConfig.cmake  README.md
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/formatter_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
hello_world_application/formatter_ex_lib/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_application/solver_lib/: CMakeLists.txt
